# YetAnotherVteTerminal

./: Cargo.toml  README.md
src/: app.rs  config.ron  config.rs  main.rs
vte-rs/: Cargo.toml  Gir.toml
vte-rs/src/: lib.rs  terminal.rs
vte-rs/src/auto/: enums.rs  flags.rs  mod.rs  pty.rs  regex.rs  terminal.rs  versions.txt
vte-rs/vte-sys-rs/: Cargo.toml  Gir.toml  build.rs
vte-rs/vte-sys-rs/src/: lib.rs
vte-rs/vte-sys-rs/tests/: abi.rs  constant.c  layout.c
