[package]
name = "yavt"
version = "0.1.0"
authors = ["Poly <marynczak.bartlomiej@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# vte-rs = "0.4.0"
vte-rs = {path = "./vte-rs", features=["v0_58"]}
vte-sys = {path= "./vte-rs/vte-sys-rs",features=["v0_58"]}
gtk = {version="0.9.2",features=["v3_22"]}
gio = "0.9.1"
glib = "0.10.1"
gdk = "0.13.2"
pango = "0.9.1"
pwd = "1.3.0"
ron = "*"

serde = {version="*", features=["derive"]}
