[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
description = "Rust bindings for the VTE 3 library"
license = "MIT"
name = "vte-rs"
version = "0.3.0"

[dependencies]
bitflags = "1.2.1"
gdk-sys = "0.10.0"
gdk = "0.13.2"
gio = "0.9.1"
gio-sys = "0.10.0"
glib = "0.10.1"
glib-sys = "0.10.0"
gobject-sys = "0.10.0"
gtk = "0.9.2"
gtk-sys = "0.10.0"
libc = "0.2.76"
pango = "0.9.1"
vte-sys = { path="vte-sys-rs", version = "0.2.2" }

[lib]
name = "vte"

[features]
v0_40 = ["vte-sys/v0_40"]
v0_42 = ["v0_40", "vte-sys/v0_42"]
v0_44 = ["v0_42", "vte-sys/v0_44"]
v0_46 = ["v0_44", "vte-sys/v0_46"]
v0_48 = ["v0_46", "vte-sys/v0_48"]
v0_50 = ["v0_48", "vte-sys/v0_48"]
v0_52 = ["v0_50", "vte-sys/v0_50"]
v0_54 = ["v0_52", "vte-sys/v0_52"]
v0_56 = ["v0_54", "vte-sys/v0_54"]
v0_58 = ["v0_56", "vte-sys/v0_56"]
