[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
description = "Rust bindings for the VTE 3 library"
license = "MIT"
name = "vte-rs"
version = "0.3.0"
edition = "2018"

[dependencies]
bitflags = "1.2.1"
gdk-sys = "0.14.0"
gdk = "0.14.0"
gio = "0.14.0"
gio-sys = "0.14.0"
glib = "0.14.0"
glib-sys = "0.14.0"
gobject-sys = "0.14.0"
gtk = "0.14.0"
gtk-sys = "0.14.0"
libc = "0.2.76"
pango = "0.14.0"
ffi = { path="vte-sys-rs", package="vte-sys", version = "0.2.2" }

[lib]
name = "vte"

[features]
v0_40 = ["ffi/v0_40"]
v0_42 = ["v0_40", "ffi/v0_42"]
v0_44 = ["v0_42", "ffi/v0_44"]
v0_46 = ["v0_44", "ffi/v0_46"]
v0_48 = ["v0_46", "ffi/v0_48"]
v0_50 = ["v0_48", "ffi/v0_48"]
v0_52 = ["v0_50", "ffi/v0_50"]
v0_54 = ["v0_52", "ffi/v0_52"]
v0_56 = ["v0_54", "ffi/v0_54"]
v0_58 = ["v0_56", "ffi/v0_56"]
