[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
build = "build.rs"
description = "FFI bindings for vte3"
license = "MIT"
links = "vte"
name = "vte-sys"
version = "0.2.2"
[package.metadata.docs.rs]
features = ["dox"]
[package.metadata.system-deps.vte_2_91]
name = "vte-2.91"
version = "0.0"

[package.metadata.system-deps.vte_2_91.feature-versions]
v0_40 = "0.40"
v0_42 = "0.42"
v0_44 = "0.44"
v0_46 = "0.46"
v0_48 = "0.48"
v0_50 = "0.50"
v0_52 = "0.52"
v0_54 = "0.54"
v0_56 = "0.56"
v0_58 = "0.58"

[build-dependencies]
pkg-config = "0.3.18"
system-deps = "1.3"

[dependencies]
bitflags = "1.2.1"
libc = "0.2"
atk-sys = "0.10.0"
gdk-sys = "0.10.0"
gio-sys = "0.10.0"
glib-sys = "0.10.0"
gobject-sys = "0.10.0"
gtk-sys = "0.10.0"
pango-sys = "0.10.0"

[features]
v0_40 = []
v0_42 = ["v0_40"]
v0_44 = ["v0_42"]
v0_46 = ["v0_44"]
v0_48 = ["v0_46"]
v0_50 = ["v0_48"]
v0_52 = ["v0_50"]
v0_54 = ["v0_52"]
v0_56 = ["v0_54"]
dox = []
v0_58 = ["v0_56"]

[lib]
name = "vte_sys"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"
